fixing bugs in resource depletion logic, an errant return was causing the group processing logic to abort as soon as one group was detected with a depleted resource.

--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -467,7 +467,7 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
 </div>
 {% comment %} resource visualization section {% endcomment %}
 <div class='row'>
-    <div data-bind='template: { name: "resource-visualization-template" }'></div>
+    <div class='col-md-12' data-bind='template: { name: "resource-visualization-template" }'></div>
 </div>
 {% comment %} resource harvest decision section {% endcomment %}
 <div data-bind='ifnot: isResourceEmpty'>
