fixing issues with CAS login preventing experimenter logins

--- a/vcweb/core/templates/cas_access_forbidden.html
+++ b/vcweb/core/templates/cas_access_forbidden.html
@@ -7,6 +7,6 @@
 {% block page %}
     <h2>Access Forbidden</h2>
     <div class='entry'>
-        We don't take Grad student registrations for the time being.
+        Your account is currently locked.
     </div>
 {% endblock page %}
