--- a/vcweb/core/templates/cas_access_forbidden.html
+++ b/vcweb/core/templates/cas_access_forbidden.html
@@ -7,6 +7,7 @@
 {% block page %}
     <h2>Access Forbidden</h2>
     <div class='entry'>
-        Your account is currently locked.
+         We don't take Grad student registrations for the time being.
+         If you still want to create an account then get in touch with the system administrator.
     </div>
 {% endblock page %}
