--- a/vcweb/core/templates/ostromlab/faq.html
+++ b/vcweb/core/templates/ostromlab/faq.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block page %}
 <h3>Ostrom Lab Frequently Asked Questions</h3>
 
 <div class='panel-group' id='accordion'>
@@ -18,4 +19,4 @@
         </div>
     </div>
 </div>
-
+{% endblock %}
