--- a/vcweb/core/templates/cas_access_forbidden.html
+++ b/vcweb/core/templates/cas_access_forbidden.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Access Forbidden
+    Closed Registration
 {% endblock %}
 
 {% block page %}
     <h2>Access Forbidden</h2>
     <div class='entry'>
-         We don't take Grad student registrations for the time being.
-         If you still want to create an account then get in touch with the system administrator.
+         Registration for VCWEB is limited to undergraduate students at the moment. Please 
+         <a href='http://commons.asu.edu/contact'>contact us</a> if you'd like to learn more.
     </div>
 {% endblock page %}
