adding faq entries to admin site

--- a/vcweb/core/templates/ostromlab/faq.html
+++ b/vcweb/core/templates/ostromlab/faq.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 
 {% block page %}
-<h2>Ostrom Lab Frequently Asked Questions</h2>
-
+<h2>Ostrom Lab Participant Database Frequently Asked Questions</h2>
 <div class='panel-group' id='accordion'>
     {% for faq_entry in faq_entries %}
     <div class='panel panel-default'>
