--- a/vcweb/core/templates/email/experiment-registration.html
+++ b/vcweb/core/templates/email/experiment-registration.html
@@ -1,6 +1,6 @@
 <h4>{{experiment.display_name}} registration</h4>
 <p>
-You've been registered with the {{ experiment.display_name }}.  You can access the experiment by <a href='//{{experiment.participant_url}}'>logging in to our experiment website</a> using the following credentials:
+You've been registered with the {{ experiment.display_name }}.  You can access the experiment by <a href='https://vcweb.asu.edu/{{experiment.participant_url}}'>logging in to our experiment website</a> using the following credentials:
 
 <ul>
     <li>Email: {{participant.email}}</li>
