removing incorrect instructions

--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -496,7 +496,7 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
     <div class='well'>
     <center><img alt='depleted trees' src="{% static 'images/bound/depleted-trees.jpg' %}" class="img-polaroid" width="425" height="282"></center>
     </div>
-    <div class='alert alert-danger'><i class='fa fa-warning'></i> There are no more trees to harvest and every member of your group is now deceased. Please wait until the next round begins.</div>
+    <div class='alert alert-danger'><i class='fa fa-warning'></i> There are no more trees to harvest. Please wait quietly until the next round begins.</div>
 </div>
 <div data-bind='ifnot: isResourceEmpty'>
 {% comment %} resource level visualization pre-regrowth {% endcomment %}
