--- a/vcweb/core/templates/account/profile.html
+++ b/vcweb/core/templates/account/profile.html
@@ -61,23 +61,22 @@
                     }
                 },
                 messages: {
-                    major: "We need your major if you want to receive invitations",
-                    class_status: "we need your class status if you want to receive invitations",
-                    gender: "we need your gender if you want to receive invitations",
+                    major: "Please enter your major.",
+                    class_status: "Please enter your class status",
+                    gender: "Please enter your gender",
                     email: {
-                        remote: 'Email already exists'
+                        remote: 'This email is already registered in our system. <a href="https://vcweb.asu.edu/accounts/password/reset">Request a new password?</a>'
                     }
                 },
                 submitHandler: function(form) {
                     var formData = $('#vcweb-form').serialize();
-
                     $.ajax({
                         type: "POST",
                         url: "/accounts/profile/update",
                         data: formData,
                         success: function(data) {
                             if(data.success) {
-                                $("#error-messages").html('<div class="alert alert-success"><strong>Well done! </strong>Your profile has been updated successfully.</strong></div>');
+                                $("#error-messages").html('<div class="alert alert-success"><strong>Thanks! </strong>Your profile has been updated successfully.</strong></div>');
                             } else {
                                 $("#error-messages").html('<div class="alert alert-danger"><strong>'+data.message+'</strong></div>');
                             }
