renaming experiment session signup templates and views, minor hygiene
--HG--
rename : vcweb/core/templates/participant/participant-index.html => vcweb/core/templates/participant/experiment-session-signup.html

--- a/vcweb/core/templates/account/asu_registration.html
+++ b/vcweb/core/templates/account/asu_registration.html
@@ -11,8 +11,10 @@
             <h3 class='panel-title'>Experiment Mailing List Registration for {{ request.user.get_full_name }}</h3>
         </div>
         <div class='panel-body'>
-            Please fill out the following fields to be registered with our experiment mailing list. If you have any
-            questions, please see <a href='/ostromlab/faq'>our FAQ</a> or feel free to <a href='/contact'>contact us</a>.
+            Please fill out all of the following fields to be registered with our experiment mailing list. In order to
+            participate in our experiments you must be an <b>undergraduate student currently enrolled at ASU and at
+            least 18 years of age</b>. If you have any further questions, please see <a href='/ostromlab/faq'>our
+        FAQ</a> or feel free to <a href='/contact'>contact us</a>.
         </div>
     </div>
 
