Refactoring experiment_session_signup. Adding code to show message if all the experiment session are full. Fixes Issue #175.

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -98,7 +98,12 @@
     {% endif %}
     {% if messages %}
     <h3>Messages</h3>
-        {% bootstrap_messages %}
+        {% for message in messages %}
+            <div class="alert{% if message.tags %} alert-{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %}{% endif %} alert-dismissable">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                {{ message|safe }}
+            </div>
+        {% endfor %}
     {% endif %}
 
     {% block page %}
