edit configuration URL should be absolute, not relative

--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -25,7 +25,7 @@
                                 <br>
                                 <div class='btn-group'>
                                     <a class='btn btn-default' data-bind='click: $root.createNewExperiment.bind($data)'><i class='fa fa-plus-circle'></i> start new experiment</a>
-                                    <a class='btn btn-default' data-bind='attr: { href: "configuration/"+ pk()+"/edit" }'><i class='fa fa-pencil-square-o'></i> edit configuration</a>
+                                    <a class='btn btn-default' data-bind='attr: { href: "/configuration/"+ pk()+"/edit" }'><i class='fa fa-pencil-square-o'></i> edit configuration</a>
                                     <a class='btn btn-default' data-bind='click: $root.cloneExperimentConfiguration.bind($data)'><i class='fa fa-files-o'></i> clone configuration</a>
                                 </div>
                             </div>
