adding linear public good parameter to fixture for test cases to run properly

--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -365,7 +365,7 @@ $(function() {
             element: "#progress",
             placement: "top",
             title: "Progress",
-            content: "This chart shows your current group score (green) and your group score goal (gray). Maximize your chances to earn a prize by helping your group meet the group score goal each day."
+            content: "This chart shows your current group score (green) and your group score goal (gray)."
         },
         {
             element: "#group-score",
@@ -375,7 +375,9 @@ $(function() {
         },
         {
             element: "#current-level",
+            {% comment %}
             // FIXME: crappy special case logic to deal with scheduled activities vs level based activities
+            {% endcomment %}
             title: viewModel.hasScheduledActivities() ? "Your Score" : "Current Level",
             placement: "top",
             content: viewModel.hasScheduledActivities() ? "This shows the number of points you have contributed to your group today." : "This is your group's current level. Each new level unlocks 5 new challenges."
